--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,10 @@
     @apply bg-logoPurple text-white top-0 right-0 fixed w-full h-screen flex flex-col translate-x-full gap-y-[6rem] py-1 px-6 -z-10;
   }
 
+  .active {
+    @apply px-4 py-1 bg-white rounded-lg text-logoPurple;
+  }
+
   .show-sidebar {
     @apply z-10 translate-x-0;
   }
