--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 
 @layer components {
   .sidebar {
-    @apply bg-logoPurple text-white top-0 right-0 fixed w-full h-screen flex flex-col translate-x-full gap-y-[6rem] py-1 px-6 -z-10;
+    @apply bg-logoPurple z-10 text-white md:hidden transition ease-in top-0 right-0 fixed w-full h-screen flex flex-col translate-x-full gap-y-[6rem] py-1 px-6;
   }
 
   .active {
@@ -18,6 +18,10 @@
   }
 
   .show-sidebar {
-    @apply z-10 translate-x-0;
+    @apply z-10 translate-x-0 transition ease-out;
+  }
+
+  .underline {
+    @apply w-14 h-1 mb-2 bg-sweetOrange;
   }
 }
