--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
   }
 
   .btn {
-    @apply bg-logoPurple shadow-lg text-white py-1 px-6 rounded-sm;
+    @apply bg-logoPurple shadow-lg text-white py-2 px-6 rounded-md;
   }
 
   .title {
