--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 @layer base {
   html {
-    font-family: "Sen", "DM Sans", "Cabin Sketch", system-ui, sans-serif;
+    font-family: "Quicksand", "Sen ", "Montserrat", system-ui, sans-serif;
   }
 }
 
